# IDCP

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.cpp
inc/: Bpm.hpp  Note.hpp  Song.hpp  Sud.hpp
src/: Bpm.cpp  CMakeLists.txt  Note.cpp  Song.cpp  Sud.cpp
